updated ImageDisplay component to render thumbs down icon & also updated the style sheet

--- a/src/components/ImageDisplay/image.css
+++ b/src/components/ImageDisplay/image.css
@@ -16,3 +16,11 @@ img {
   margin-left: 5px;
   padding-right: 5px;
 }
+
+/* .image-right-thumb{
+  display:flex;
+  align-items:center;
+} */
+.fa-thumbs-down {
+  margin-top: 3px;
+}
