updated ImageDisplay style sheet

--- a/src/components/ImageDisplay/image.css
+++ b/src/components/ImageDisplay/image.css
@@ -17,10 +17,10 @@ img {
   padding-right: 5px;
 }
 
-/* .image-right-thumb{
-  display:flex;
-  align-items:center;
-} */
+.image-right-thumb {
+  display: flex;
+  align-items: center;
+}
 .fa-thumbs-down {
   margin-top: 3px;
 }
